--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "userinfo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./InfoTecs-Table", 
+  "homepage": "/InfoTecs-Table", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
