--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "userinfo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/InfoTecs-Table", 
+  "homepage": "https://having-no-guise.github.io/InfoTecs-Table/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "dotenv": "^16.4.5",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
